# test_paddle_lite

./: CMakeLists.txt  main.cpp
paddle_lite_2.11/inference_lite_lib.with_log/cxx/include/: paddle_use_kernels.h  paddle_use_ops.h
paddle_lite_2.12/inference_lite_lib.with_log/demo/cxx/mobilenetv1_full/: CMakeLists.txt
paddle_lite_2.12/inference_lite_lib.with_log/demo/cxx/mobilenetv1_light/: CMakeLists.txt
paddle_ocr/: CMakeLists.txt  paddle_ocr_v4_paddle_lite.cpp  paddle_ocr_v4_paddle_lite2.cpp
paddle_ocr/v3/: ch_PP-OCRv3_det_opt.nb  ch_ppocr_mobile_v2.0_cls_opt.nb
paddle_ocr/v4/: ch_ppocr_mobile_v2.0_cls_opt.nb
yolov7/: CMakeLists.txt  yolov7-tiny-480-paddle-lite.cpp
