aux_source_directory(. paddle_ocr)
#set(OpenCV_DIR ${CMAKE_SOURCE_DIR}/../libs/opencv-mobile-4.5.4-android/sdk/native/jni)
find_package(OpenCV REQUIRED core imgproc highgui)
#find_package(ncnn REQUIRED)
add_library(paddle_ocr_src ${paddle_ocr})
target_link_libraries(paddle_ocr_src ${OpenCV_LIBS})
#target_link_libraries(yolov8_lib ncnn)
